# electrical

./: .bazelrc  .gitignore  LICENSE  LICENSE-APACHE  MODULE.bazel  README.md
circuit-boards/BeamBreak-v1/: BeamBreak-v1.drl  BeamBreak-v1.kicad_pcb  BeamBreak-v1.kicad_pro  BeamBreak-v1.kicad_sch  BeamBreak.kicad_sym  fp-lib-table  ibom.config.ini  kicad-fab.cfg  power-supply.kicad_sch  sym-lib-table
circuit-boards/CAN-IO-expander/: #auto_saved_files#  CAN-FD.kicad_sch  CAN-IO-expander.kicad_pcb  CAN-IO-expander.kicad_pro  CAN-IO-expander.kicad_sch  CAN-IO-expander.kicad_sym  fp-lib-table  in_out.kicad_sch  power-supply.kicad_sch  sym-lib-table
circuit-boards/CAN-hub/: CAN-hub.drl  CAN-hub.kicad_pcb  CAN-hub.kicad_pro  CAN-hub.kicad_sch  Space-Cookies-Drawing-Sheet.kicad_wks  fp-lib-table  kicad-export-fab.sh
circuit-boards/CAN_Terminator/: CAN_terminator.kicad_pcb  CAN_terminator.kicad_pro  CAN_terminator.kicad_sch  fp-lib-table
circuit-boards/NX-ButtonInterface-v1/: NX-ButtonInterface.kicad_pcb  NX-ButtonInterface.kicad_pro  NX-ButtonInterface.kicad_sch
circuit-boards/NX-ButtonInterface-v2/: NX-ButtonInterface-drl_map.dxf  NX-ButtonInterface.drl  NX-ButtonInterface.kicad_pcb  NX-ButtonInterface.kicad_pro  NX-ButtonInterface.kicad_sch
circuit-boards/NX-IndicatorBoard-v1/: LEDs.kicad_sch  NX-IndicatorBoard.kicad_pcb  NX-IndicatorBoard.kicad_pro  NX-IndicatorBoard.kicad_sch  spi-canfd.kicad_sch
circuit-boards/NX-J401-Adapter-v4/: NX-J401-Adapter-drl_map.dxf  NX-J401-Adapter.kicad_pcb  NX-J401-Adapter.kicad_pro  (+3 more)
sample/: BUILD  README.md  blink.LICENSE
(+428 files in other folders)
